--- a/css/pages_style.css
+++ b/css/pages_style.css
@@ -141,6 +141,11 @@ body {
 	height: 100%;
 	display: flex;
 	width: 50%;
+	transition: 500ms all;
+}
+
+#card #img-container:hover {
+	width: 110%;
 }
 
 #card #img-container img {
